<resources>
    <string name="app_name">My Application</string>
    <string name="filter_result">Filter Result</string>
    <string name="with_image">with Image</string>
    <string name="without_image">without Image</string>
    <string name="confirm">Confirm</string>
    <string name="add_new_name">Add new name</string>
    <string name="type_the_name">Type the Name</string>
    <string name="upload_image">Upload Image</string>
    <string name="done">Done</string>
    <string name="punch_in">Punch In</string>
    <string name="Punch_Out">Punch Out</string>
    <string name="break_in">Break In</string>
    <string name="break_out">Break Out</string>
    <string name="leave_in">Leave In</string>
    <string name="leave_out">Leave Out</string>
    <string name="time_is">time is</string>
    <string name="do_you_want">Do you want to</string>
    <string name="now">now?</string>
    <string name="loading">Loading ...</string>
    <string name="breaks">Break</string>
    <string name="leave">Leave</string>
    <string name="picture">Picture</string>
    <string name="nos">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[
            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.
        ]]>
    </string>
    <string name="success">Success</string>
    <string name="leaves_request_sent">Leaves Request Sent</string>
    <string name="welcome">Welcome</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="next">Next</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>

    <string name="org_not_found">Org. not Found!</string>
    <string name="vapeplus">Vapeplus</string>
    <string name="password_must_meet">Password must meet the following requirements:</string>
    <string name="at_least_one_letter">At least one letter</string>
    <string name="at_least_one_capital_letter">At least one capital letter</string>
    <string name="at_least_one_number">At least one number</string>
    <string name="be_at_least_characters">Be at least 8 characters</string>
    <string name="password_matched">Matched Password</string>
    <string name="password_not_matched">Not Matched Password</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype-Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">Click Here</string>
    <string name="donot_have_an_account">Don’t have an account?</string>
    <string name="create_new_now">Create new now!</string>
    <string name="field_required">Field Required</string>

    <string name="notifications">Notifications</string>
    <string name="my_notifications">My Notifications</string>
    <string name="my_team_notifications">My Team Notifications</string>
    <string name="clear_all">Clear all</string>


    <string name="approved">Approved</string>
    <string name="approval_pending">APPROVAL PENDING</string>
    <string name="rejected">Rejected</string>
    <string name="account_disabled">Your Account has been Disabled by HR manager.</string>

    <string name="my_leaves">My Leaves</string>
    <string name="my_team_leaves">My Team Leaves</string>

    <string name="employee_name">Employee Name :</string>
    <string name="edit_leave_request">Edit Leave Request</string>
    <string name="delete_leave_request">Delete Leave Request</string>
    <string name="delete_leave_request_dialog">Delete Leave Request ?</string>
    <string name="re_verify">Re Verify</string>
    <string name="clear_notification">Clear Notification</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="pending">PENDING</string>
    <string name="approved_account">APPROVED ACCOUNT</string>
    <string name="disabled_account">DISABLED ACCOUNT</string>


</resources>