<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:paddingBottom="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_height="wrap_content">


    <View
        android:id="@+id/viewSlide"
        android:layout_width="50dp"
        android:background="@color/grayDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp"
        android:layout_height="5dp"/>


    <TextView
        android:id="@+id/titleFilter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:text="@string/filter_result"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSlide" />


    <RadioGroup
        android:id="@+id/radioGroupView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleFilter">

        <RadioButton
            android:id="@+id/withImageRadioButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/with_image" />

        <RadioButton
            android:id="@+id/withOutImageRadioButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/without_image" />
    </RadioGroup>


    <Button
        android:id="@+id/confirmImageView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:text="@string/confirm"
        android:background="@drawable/confirm_button_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupView" />


</androidx.constraintlayout.widget.ConstraintLayout>