<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#F6F8F9"
    android:layout_height="match_parent"
    tools:context=".ui.LoginByEmailActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="#F6F8F9"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/arrowBackImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="22dp"
        android:background="@android:color/transparent"
        android:src="@drawable/vector_black_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/arrowBackImageButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupTextView" />

    <EditText
        android:id="@+id/organizationOrEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/shape_type_name"
        android:gravity="center"
        android:hint="Organization ID or Email"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayoutLoginByEmailFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/shape_type_name"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organizationOrEmailEditText"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordLoginByEmailFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:gravity="center|top"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/keepMeLoggedInCheckBox"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:buttonTint="#F69DFF"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@+id/passwordTextInputLayoutLoginByEmailFragment"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayoutLoginByEmailFragment" />

    <TextView
        android:id="@+id/keepMeLoggedInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/keep_me_logged_in"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/keepMeLoggedInCheckBox"
        app:layout_constraintTop_toTopOf="@+id/keepMeLoggedInCheckBox" />

    <Button
        android:id="@+id/loginByEmailButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/confirm_button_shape"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keepMeLoggedInTextView" />

    <TextView
        android:id="@+id/forgetPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/keepMeLoggedInCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/loginByEmailButton" />

    <TextView
        android:id="@+id/clickHereTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/click_here"
        android:textColor="#E70B89"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/forgetPasswordTextView"
        app:layout_constraintTop_toBottomOf="@+id/loginByEmailButton" />


    <TextView
        android:id="@+id/donot_have_an_accountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/donot_have_an_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/forgetPasswordTextView"
        app:layout_constraintTop_toBottomOf="@+id/forgetPasswordTextView" />

    <TextView
        android:id="@+id/createNewNowTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="60dp"
        android:text="@string/create_new_now"
        android:textColor="#E70B89"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/donot_have_an_accountTextView"
        app:layout_constraintTop_toBottomOf="@+id/forgetPasswordTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>