<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:background="@android:color/transparent"
        android:src="@drawable/vector_black_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/myLeaveTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myLeaveTextView" />

    <TextView
        android:id="@+id/myLeaveTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="Notificaions"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/clearAllTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:drawableLeft="@drawable/vector_notification_icon"
        android:text="@string/clear_all"
        android:textColor="#708792"
        app:layout_constraintBottom_toBottomOf="@+id/myLeaveTextView"
        app:layout_constraintEnd_toEndOf="@+id/myLeaveTextView"
        app:layout_constraintTop_toTopOf="@+id/myLeaveTextView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myLeaveTextView">

        <TextView
            android:id="@+id/myNotificationTextView"
            android:layout_width="wrap_content"
            android:textColor="#202124"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:textSize="13sp"
            android:text="@string/my_notifications"

            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:id="@+id/myTeamsNotificationTextView"
            android:layout_width="wrap_content"
            android:textColor="#808080"
            android:textSize="13sp"
            android:text="@string/my_team_notifications"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notificationRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>